--- a/views/index.html
+++ b/views/index.html
@@ -11,6 +11,9 @@
 				<button type='submit' class='btn btn-default'>Submit</button>
 			</form>
 		</div>
+
+		<a href="/new_pic/test">Test text</a>
+
 		<h3>Current Queue:</h3>
 		{% for person in queue %}
 			<p>{{person}}</p>
